--- a/iDeliverService/Properties/launchSettings.json
+++ b/iDeliverService/Properties/launchSettings.json
@@ -6,15 +6,19 @@
     "iisExpress": {
       "applicationUrl": "http://localhost:26235",
       "sslPort": 0
+    },
+    "iis": {
+      "applicationUrl": "http://localhost",
+      "sslPort": 0
     }
   },
   "profiles": {
-    "iDeliverService": {
-      "commandName": "Project",
+    "IIS": {
+      "commandName": "IIS",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5117",
+      "applicationUrl": "http://localhost/iDeliverService",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
