--- a/iDeliverService/Properties/launchSettings.json
+++ b/iDeliverService/Properties/launchSettings.json
@@ -7,22 +7,22 @@
       "applicationUrl": "http://localhost:5117",
       "sslPort": 0
     },
-    "iis": {
-      "applicationUrl": "http://localhost/iDeliverService",
-      "sslPort": 0
-    }
+    //"iis": {
+    //  "applicationUrl": "http://localhost/iDeliverService",
+    //  "sslPort": 0
+    //}
   },
   "profiles": {
-    "IIS": {
-      "commandName": "IIS",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "http://localhost/iDeliverService",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
+    //"IIS": {
+    //  "commandName": "IIS",
+    //  "dotnetRunMessages": true,
+    //  "launchBrowser": true,
+    //  "launchUrl": "swagger",
+    //  "applicationUrl": "http://localhost/iDeliverService",
+    //  "environmentVariables": {
+    //    "ASPNETCORE_ENVIRONMENT": "Development"
+    //  }
+    //},
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
