--- a/iDeliverService/appsettings.json
+++ b/iDeliverService/appsettings.json
@@ -10,6 +10,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IDeliverDB": "Data Source=DESKTOP-9B41GDC;Initial Catalog=IDeliver;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "IDeliverDB": "Data Source=DESKTOP-T7UIV44;Initial Catalog=iDeliverDB;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    //"IDeliverDB": "Data Source=DESKTOP-9B41GDC;Initial Catalog=IDeliver;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
