--- a/IDeliverObjects/efpt.config.json
+++ b/IDeliverObjects/efpt.config.json
@@ -26,6 +26,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[DriverCase]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[DriverDetails]",
          "ObjectType": 0
       },
