--- a/iDeliverService/appsettings.json
+++ b/iDeliverService/appsettings.json
@@ -16,6 +16,7 @@
   "ConnectionStrings": {
     "IDeliverDB": "Server=A2NWPLSK14SQL-v01.shr.prod.iad2.secureserver.net;Database=iDeliverDB;User Id=ideliveruser;password=&&MohaNNad&&HoSSam__;Trusted_Connection=False;MultipleActiveResultSets=true;"
     //"IDeliverDB": "Data Source=DESKTOP-9B41GDC;Initial Catalog=IDeliver;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    //"IDeliverDB": "Data Source=DESKTOP-9B41GDC;Initial Catalog=IDeliver;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
 
   }
 }
